--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>Mason Color 4 a Cure 5K</h2>
+							<p>Benefitting the <br />
+							Lukemia Lymphoma Society<br />
+							by Mason High School National Honor Society.</p>
 							<ul class="actions">
-								<li><a href="#" class="button special">Activate</a></li>
+								<li><a href="#" class="button special">Register</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
