About page updates

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </style>
 
 <article>
-    <h1>We&rsquo;ll be back soon!</h1>
+    <h1>Under Construction</h1>
     <div>
         <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. We&rsquo;ll be back online shortly!</p>
         <p>&mdash; MHS Color 4 A Cure Team</p>
