--- a/copyofhome.html
+++ b/copyofhome.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
+						<h1><a href="index.html">Spectral</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -30,9 +30,9 @@
 										<ul>
 											<li><a href="index.html">Home</a></li>
 											<li><a href="about.html">About</a></li>
-											<li><a href="about.html#faq">FAQ</a></li>
+											<li><a href="about.html">FAQ</a></li>
 											<li><a href="sponsors.html">Sponsors</a></li>
-											<li><a href="#">Register</a></li>
+											<li><a href="register.html">Register</a></li>
 										</ul>
 									</div>
 								</li>
@@ -69,6 +69,31 @@
 								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
 							</ul>
 						</div>
+					</section>
+
+				<!-- Two -->
+					<section id="two" class="wrapper alt style2">
+						<section class="spotlight">
+							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+								<h2>Magna primis lobortis<br />
+								sed ullamcorper</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
+								<h2>Tortor dolore feugiat<br />
+								elementum magna</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
+						<section class="spotlight">
+							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+								<h2>Augue eleifend aliquet<br />
+								sed condimentum</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							</div>
+						</section>
 					</section>
 
 				<!-- Three -->
@@ -112,12 +137,12 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Register now</h2>
-								<p>Register before 00.00 to receive a T-shirt</p>
+								<h2>Arcue ut vel commodo</h2>
+								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#link1" class="button fit">REGISTER</a></li>
-								<li><a href="about.html" class="button fit special">Learn more</a></li>
+								<li><a href="#" class="button fit special">Activate</a></li>
+								<li><a href="#" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
@@ -142,7 +167,7 @@
 			<script src="assets/js/jquery.scrolly.min.js"></script>
 			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
-						<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
 
 	</body>
