new registration page with form buttons

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 								<li><a href="about.html">About</a></li>
 								<li><a href="about.html#faq">FAQ</a></li>
 								<li><a href="sponsors.html">Sponsors</a></li>
-								<li><a href="#">Register</a></li>
+								<li><a href="register.html">Register</a></li>
 							</ul>
 						</div>
 					</li>
@@ -47,7 +47,7 @@
 			<section class="wrapper style5">
 				<div class="inner">
 					<section>
-						<h4>Event Details</h4>
+						<h2>Event Details</h2>
 						<div class="row">
 							<div class="6u 12u$(medium)">
 								<h5>Schedule</h5>
@@ -84,9 +84,10 @@
 							</div>
 							<div class="6u$ 12u$(medium)">
 								<h5>Check-in</h5>
-								<ul>
-									<li>Corwin Nixon Park 6100 Mason Montgomery Rd, Mason, OH 45040</li>
-									<li>Saturday 11/11/17 10 - 11 AM</li>
+								<ul class ="alt">
+									<li><i class="fa fa-map-marker" aria-hidden="true"></i>  <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
+									<li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday 11/11/17 10 - 11 AM</li>
+									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefitting the Lukemia and Lymphoma Society through Mason National Honor Society</li>
 								</ul>
 
 								<h5>Pricing</h5>
@@ -189,7 +190,7 @@
 								</div>
 								<div id="collapseSix" class="collapse" role="tabpanel" aria-labelledby="headingSix" data-parent="#accordion">
 									<div class="card-body">
-										Absolutely!___
+										Absolutely! This year, registration is designed to welcome runners from all over the city that want to run for a cure.
 									</div>
 								</div>
 							</div>
