--- a/home.html
+++ b/home.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Spectral by HTML5 UP</title>
@@ -32,7 +28,7 @@
 											<li><a href="about.html">About</a></li>
 											<li><a href="about.html#faq">FAQ</a></li>
 											<li><a href="sponsors.html">Sponsors</a></li>
-											<li><a href="#">Register</a></li>
+											<li><a href="register.html">Register</a></li>
 										</ul>
 									</div>
 								</li>
