--- a/register.html
+++ b/register.html
@@ -1,8 +1,13 @@
 <!DOCTYPE HTML>
+<!--
+	Spectral by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
 
 <head>
-    <title>Sponsors</title>
+    <title>Register</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -39,43 +44,46 @@
 
         <!-- Main -->
         <article id="main">
-            <header>
-                <h2>Our Sponsors</h2>
-            </header>
-            <section class="wrapper style5">
-                <div class="inner">
-                    <section>
-                        <h2>Corporate Sponsors</h2>
-                        <div class="box alt">
-                            <div class="row uniform 50%">
-                                <div class="4u"><span class="image fit"><img src="http://logo-load.com/uploads/posts/2016-04/1459873060_culvers-logo.png" alt="" /></span></div>
-                                <div class="4u"><span class="image fit"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Current_Kroger_logo.svg/1000px-Current_Kroger_logo.svg.png" alt="" /></span></div>
-                                <div class="4u"><span class="image fit"><img src="https://www.philanthropy.com/img/photos/biz/photo_81669_original.png" alt="" /></span></div>
-                                <div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-                                <div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-                                <div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                                <div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
-                            </div>
-                        </div>
-                    </section>
-                    <section>
-                        <h2>Personal Sponsors</h2>
-                        <div class="row">
-                            <div class="6u 12u$(medium)">
-                                <ul class="alt">
-                                    <li>The Jones Family</li>
-                                    <li>Bob and Sue Johnson</li>
-                                    <li>The Randy Family</li>
-                                </ul>
-                            </div>
-                        </div>
-                    </section>
+    			<header>
+    				<h2>Register</h2>
+    			</header>
+    			<section class="wrapper style5">
+    				<div class="inner">
+    					<section>
+    						<h2>Register</h2>
+    						<div class="row">
+    							<div class="6u 12u$(medium)">
+    								<a href="#" class="button fit special">Fit</a>
+    							</div>
+    							<div class="6u$ 12u$(medium)">
+                    <div class="5u$ 12u$(medium)">
+                      <a href="#" class="button fit special">Fit</a><a href="#" class="button fit special">Fit</a>
+                    </div>
+    								<h5>Check-in</h5>
+    								<ul class ="alt">
+    									<li><i class="fa fa-map-marker" aria-hidden="true"></i>  <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
+    									<li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday 11/11/17 10 - 11 AM</li>
+    									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefitting the Lukemia and Lymphoma Society through Mason National Honor Society</li>
+    								</ul>
+
+    								<h5>Pricing</h5>
+    								<ul class="alt">
+    									<li>10/16 - 10/26 Early Registration: $25 with t-shirt</li>
+    									<li>10/27 - 11/10 Late Registration: $25 no t-shirt</li>
+    									<li>11/11 Day of Registration: $30 no t-shirt</li>
+    									<li><i>Children 3 and under: free</i></li>
+    								</ul>
+    							</div>
+    						</div>
+    					</section>
+    				</div>
+    			</section>
+    		</article>
 
 
 
-                </div>
-            </section>
-        </article>
+
+
 
         <!-- Footer -->
         <footer id="footer">
