deleting default elements

--- a/home.html
+++ b/home.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+		<title>Home - MHS Color 4 a Cure 5K</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -25,8 +25,9 @@
 									<div id="menu">
 										<ul>
 											<li><a href="index.html">Home</a></li>
-											<li><a href="about.html">About</a></li>
-											<li><a href="about.html#faq">FAQ</a></li>
+											<li><a href="event.html">Event Details</a></li>
+											<li><a href="event.html#faq">FAQ</a></li>
+											<li><a href="about.html">About Us</a></li>
 											<li><a href="sponsors.html">Sponsors</a></li>
 											<li><a href="register.html">Register</a></li>
 										</ul>
@@ -44,7 +45,7 @@
 							Lukemia Lymphoma Society<br />
 							by Mason High School National Honor Society.</p>
 							<ul class="actions">
-								<li><a href="#" class="button special">Register</a></li>
+								<li><a href="#" class="button">Register</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
@@ -84,22 +85,6 @@
 									<h3>Ac Augue Eget</h3>
 									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
 								</li>
-								<li class="icon fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-headphones">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-heart-o">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-flag-o">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
 							</ul>
 						</div>
 					</section>
@@ -109,11 +94,11 @@
 						<div class="inner">
 							<header>
 								<h2>Register now</h2>
-								<p>Register before 00.00 to receive a T-shirt</p>
+								<p>Register before 10.26 to receive a free t-shirt.</p>
 							</header>
 							<ul class="actions vertical">
-								<li><a href="#link1" class="button fit">REGISTER</a></li>
-								<li><a href="about.html" class="button fit special">Learn more</a></li>
+								<li><a href="register.html" class="button fit">REGISTER</a></li>
+								<li><a href="event.html" class="button fit special">Learn more</a></li>
 							</ul>
 						</div>
 					</section>
