links to download necessary forms

--- a/register.html
+++ b/register.html
@@ -1,13 +1,8 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 
 <head>
-    <title>Register</title>
+    <title>Register MHS Color 4 a Cure 5K</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -30,11 +25,12 @@
                         <a href="#menu" class="menuToggle"><span>Menu</span></a>
                         <div id="menu">
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="about.html#faq">FAQ</a></li>
-                                <li><a href="sponsors.html">Sponsors</a></li>
-                                <li><a href="register.html">Register</a></li>
+                              <li><a href="index.html">Home</a></li>
+                              <li><a href="event.html">Event Details</a></li>
+                              <li><a href="event.html#faq">FAQ</a></li>
+                              <li><a href="about.html">About Us</a></li>
+                              <li><a href="sponsors.html">Sponsors</a></li>
+                              <li><a href="register.html">Register</a></li>
                             </ul>
                         </div>
                     </li>
@@ -53,18 +49,19 @@
     						<h2>Register</h2>
     						<div class="row">
     							<div class="6u 12u$(medium)">
-    								<a href="#" class="button fit special">Fit</a>
+    								<a href="#" class="button fit special">Register</a>
     							</div>
     							<div class="6u$ 12u$(medium)">
-                    <div class="5u$ 12u$(medium)">
-                      <a href="#" class="button fit special">Fit</a><a href="#" class="button fit special">Fit</a>
-                    </div>
+                      <a href="#" class="button fit special">Adult EMA</a>
+                      <a href="#" class="button fit special">Student EMA</a>
+
     								<h5>Check-in</h5>
     								<ul class ="alt">
     									<li><i class="fa fa-map-marker" aria-hidden="true"></i>  <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
     									<li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday 11/11/17 10 - 11 AM</li>
     									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefitting the Lukemia and Lymphoma Society through Mason National Honor Society</li>
     								</ul>
+                    <a href="about.html" class="button" id="btndetails">Event Details</a>
 
     								<h5>Pricing</h5>
     								<ul class="alt">
