--- a/sponsors.html
+++ b/sponsors.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Sponsors</title>
+    <title>Sponsors - MHS Color 4 a Cure 5K</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -25,11 +25,12 @@
                         <a href="#menu" class="menuToggle"><span>Menu</span></a>
                         <div id="menu">
                             <ul>
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="about.html#faq">FAQ</a></li>
-                                <li><a href="sponsors.html">Sponsors</a></li>
-                                <li><a href="register.html">Register</a></li>
+                              <li><a href="index.html">Home</a></li>
+                              <li><a href="event.html">Event Details</a></li>
+                              <li><a href="event.html#faq">FAQ</a></li>
+                              <li><a href="about.html">About Us</a></li>
+                              <li><a href="sponsors.html">Sponsors</a></li>
+                              <li><a href="register.html">Register</a></li>
                             </ul>
                         </div>
                     </li>
