--- a/sponsors.html
+++ b/sponsors.html
@@ -26,11 +26,13 @@
                         <div id="menu">
                             <ul>
                               <li><a href="index.html">Home</a></li>
-                              <li><a href="event.html">Event Details</a></li>
-                              <li><a href="event.html#faq">FAQ</a></li>
-                              <li><a href="about.html">About Us</a></li>
-                              <li><a href="sponsors.html">Sponsors</a></li>
-                              <li><a href="register.html">Register</a></li>
+        											<li><a href="event.html">Event Details</a></li>
+        											<li><a href="event.html#faq">FAQ</a></li>
+        											<li><a href="about.html">About Us</a></li>
+        											<li><a href="sponsors.html">Our Sponsors</a></li>
+        											<li><a href="contact.html">Contact Us</a></li>
+
+        											<li><a href="register.html"></br>Register</a></li>
                             </ul>
                         </div>
                     </li>
@@ -77,7 +79,19 @@
                 </div>
             </section>
         </article>
-
+        <!-- CTA -->
+          <section id="cta" class="wrapper style4">
+            <div class="inner">
+              <header>
+                <h2>Register now</h2>
+                <p>Register before 10.26 to receive a free t-shirt.</p>
+              </header>
+              <ul class="actions vertical">
+                <li><a href="register.html" class="button fit">REGISTER</a></li>
+                <li><a href="event.html" class="button fit special">Learn more</a></li>
+              </ul>
+            </div>
+          </section>
         <!-- Footer -->
         <footer id="footer">
             <ul class="icons">
