--- a/event.html
+++ b/event.html
@@ -31,8 +31,10 @@
 								<li><a href="event.html">Event Details</a></li>
 								<li><a href="event.html#faq">FAQ</a></li>
 								<li><a href="about.html">About Us</a></li>
-								<li><a href="sponsors.html">Sponsors</a></li>
-								<li><a href="register.html">Register</a></li>
+								<li><a href="sponsors.html">Our Sponsors</a></li>
+								<li><a href="contact.html">Contact Us</a></li>
+
+								<li><a href="register.html"></br>Register</a></li>
 							</ul>
 						</div>
 					</li>
@@ -81,14 +83,20 @@
 											</tr>
 										</tbody>
 									</table>
+									<h5>Race Day</h5>
+									<ul class="alt">
+										<li>Bring printed <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing">Adult</a> or <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing">Student</a> waiver forms</li>
+										<li><i>Children 3 and under: free</i></li>
+									</ul>
 								</div>
+
 							</div>
 							<div class="6u$ 12u$(medium)">
-								<h5>Check-in</h5>
+								<h5>Color 4 A Cure 5K</h5>
 								<ul class ="alt">
 									<li><i class="fa fa-map-marker" aria-hidden="true"></i>  <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
 									<li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday 11/11/17 10 - 11 AM</li>
-									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefitting the Lukemia and Lymphoma Society through Mason National Honor Society</li>
+									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefiting the Lukemia and Lymphoma Society through Mason National Honor Society</li>
 								</ul>
 
 								<h5>Pricing</h5>
@@ -98,11 +106,13 @@
 									<li>11/11 Day of Registration: $30 no t-shirt</li>
 									<li><i>Children 3 and under: free</i></li>
 								</ul>
+								<a href="register.html" class="button fit special">Register</a>
 							</div>
 						</div>
 					</section>
 
 					<!--FAQ-->
+				</br></br>
 					<header>
 						<h2><a name="faq" id="faq">Frequently Asked Questions</a></h2>
 
@@ -197,6 +207,20 @@
 							</div>
 
 
+							<div class="card">
+								<div class="card-header" role="tab" id="headingSeven">
+									<h5 class="mb-0">
+										<a class="collapsed" data-toggle="collapse" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+											What if I have a question that isn't answered here?
+										</a>
+									</h5>
+								</div>
+								<div id="collapseSeven" class="collapse" role="tabpanel" aria-labelledby="headingSeven" data-parent="#accordion">
+									<div class="card-body">
+										Contact us at <b><a href="mailto:hello@gmail.com">hello@gmail.com</a><b> or <b>513.123.1234</b>
+										</div>
+								</div>
+							</div>
 						</div>
 
 					</header>
@@ -209,7 +233,18 @@
 
 
 
-
+		<!-- CTA -->
+			<section id="cta" class="wrapper style4">
+				<div class="inner">
+					<header>
+						<h2>Register now</h2>
+						<p>Register before 10.26 to receive a free t-shirt.</p>
+					</header>
+					<ul class="actions vertical">
+						<li><a href="register.html" class="button fit">REGISTER</a></li>
+					</ul>
+				</div>
+			</section>
 
 
 		<!-- Footer -->
