--- a/home.html
+++ b/home.html
@@ -28,8 +28,10 @@
 											<li><a href="event.html">Event Details</a></li>
 											<li><a href="event.html#faq">FAQ</a></li>
 											<li><a href="about.html">About Us</a></li>
-											<li><a href="sponsors.html">Sponsors</a></li>
-											<li><a href="register.html">Register</a></li>
+											<li><a href="sponsors.html">Our Sponsors</a></li>
+											<li><a href="contact.html">Contact Us</a></li>
+
+											<li><a href="register.html"></br>Register</a></li>
 										</ul>
 									</div>
 								</li>
@@ -41,9 +43,8 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Mason Color 4 a Cure 5K</h2>
-							<p>Benefitting the <br />
-							Lukemia Lymphoma Society<br />
-							by Mason High School National Honor Society.</p>
+							<p>Benefiting the Lukemia Lymphoma Society<br />
+							Through Mason High School National Honor Society</p>
 							<ul class="actions">
 								<li><a href="#" class="button">Register</a></li>
 							</ul>
