--- a/register.html
+++ b/register.html
@@ -26,11 +26,13 @@
                         <div id="menu">
                             <ul>
                               <li><a href="index.html">Home</a></li>
-                              <li><a href="event.html">Event Details</a></li>
-                              <li><a href="event.html#faq">FAQ</a></li>
-                              <li><a href="about.html">About Us</a></li>
-                              <li><a href="sponsors.html">Sponsors</a></li>
-                              <li><a href="register.html">Register</a></li>
+        											<li><a href="event.html">Event Details</a></li>
+        											<li><a href="event.html#faq">FAQ</a></li>
+        											<li><a href="about.html">About Us</a></li>
+        											<li><a href="sponsors.html">Our Sponsors</a></li>
+        											<li><a href="contact.html">Contact Us</a></li>
+
+        											<li><a href="register.html"></br>Register</a></li>
                             </ul>
                         </div>
                     </li>
@@ -52,16 +54,17 @@
     								<a href="#" class="button fit special">Register</a>
     							</div>
     							<div class="6u$ 12u$(medium)">
-                      <a href="#" class="button fit special">Adult EMA</a>
-                      <a href="#" class="button fit special">Student EMA</a>
 
-    								<h5>Check-in</h5>
+                      <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit special">Adult EMA</a>
+                      <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit special">Student EMA</a>
+
+    								<h5>Color 4 A Cure 5K</h5>
     								<ul class ="alt">
     									<li><i class="fa fa-map-marker" aria-hidden="true"></i>  <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
-    									<li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday 11/11/17 10 - 11 AM</li>
-    									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefitting the Lukemia and Lymphoma Society through Mason National Honor Society</li>
+    									<li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday 11/11/17         10 - 11 AM</li>
+    									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefiting the Lukemia and Lymphoma Society through Mason National Honor Society</li>
     								</ul>
-                    <a href="about.html" class="button" id="btndetails">Event Details</a>
+                    <a href="event.html" class="button" id="btndetails">Event Details</a>
 
     								<h5>Pricing</h5>
     								<ul class="alt">
