--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">MASON COLOR 4 A CURE 5K</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
@@ -27,8 +27,12 @@
 											<li><a href="event.html">Event Details</a></li>
 											<li><a href="event.html#faq">FAQ</a></li>
 											<li><a href="about.html">About Us</a></li>
-											<li><a href="sponsors.html">Sponsors</a></li>
-											<li><a href="register.html">Register</a></li>
+											<li><a href="sponsors.html">Our Sponsors</a></li>
+											<li><a href="contact.html">Contact Us</a></li>
+
+											<li><a href="register.html"></br>Register</a></li>
+
+
 
 										</ul>
 									</div>
@@ -36,35 +40,47 @@
 							</ul>
 						</nav>
 					</header>
-
+					<!-- CTA -->
+						<section id="cta" class="wrapper style4">
+							<div class="inner">
+								<header>
+									<h2>Register now</h2>
+									<p>Register before 10.26 to receive a free t-shirt.</p>
+								</header>
+								<ul class="actions vertical">
+									<li><a href="register.html" class="button fit">REGISTER</a></li>
+									<li><a href="event.html" class="button fit special">Learn more</a></li>
+								</ul>
+							</div>
+						</section>
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Elements</h2>
-							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
+							<h2>Contact Us</h2>
+							<p>Feel free to reach out if you have any questions or concerns.</p>
 						</header>
 						<section class="wrapper style5">
 							<div class="inner">
-
-
-
+								<h4>Contact Us</h4>
+								<h5><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:hello@gmail.com"> hello@gmail.com</a></h5>
+								<h5><i class="fa fa-phone" aria-hidden="true"></i> 513.123.1234</h5>
+								<hr />
 							</div>
 						</section>
 					</article>
 
 				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</footer>
+				<footer id="footer">
+					<ul class="icons">
+						<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>Color 4 a cure 5k</li>
+						<li>Mason High School National Honor Society</li>
+					</ul>
+				</footer>
 
 			</div>
 
