--- a/about.html
+++ b/about.html
@@ -28,8 +28,10 @@
 											<li><a href="event.html">Event Details</a></li>
 											<li><a href="event.html#faq">FAQ</a></li>
 											<li><a href="about.html">About Us</a></li>
-											<li><a href="sponsors.html">Sponsors</a></li>
-											<li><a href="register.html">Register</a></li>
+											<li><a href="sponsors.html">Our Sponsors</a></li>
+											<li><a href="contact.html">Contact Us</a></li>
+
+											<li><a href="register.html"></br>Register</a></li>
 										</ul>
 									</div>
 								</li>
