--- a/home.html
+++ b/home.html
@@ -119,6 +119,10 @@
 			</div>
 
 		<!-- Scripts -->
+		 <script src="assets/js/video.js"></script>
+
+
+
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
