--- a/event.html
+++ b/event.html
@@ -85,8 +85,7 @@
 									</table>
 									<h5>Race Day</h5>
 									<ul class="alt">
-										<li>Bring printed <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing">Adult</a> or <a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing">Student</a> waiver forms</li>
-										<li><i>Children 3 and under: free</i></li>
+										<li>Bring your printed <a target= "_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing">Adult</a> or <a target= "_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing">Student</a> waiver forms to check-in at the <a target= "_blank"  href="https://goo.gl/maps/NJE7pdRXsoy">Mason High School Small Commons</a> (6100 S Mason Montgomery Rd)</li>
 									</ul>
 								</div>
 
