--- a/event.html
+++ b/event.html
@@ -240,7 +240,7 @@
 						<p>Register before 10.26 to receive a free t-shirt.</p>
 					</header>
 					<ul class="actions vertical">
-						<li><a href="register.html" class="button fit">REGISTER</a></li>
+						<li><a href="register.html" class="button fit special">REGISTER</a></li>
 					</ul>
 				</div>
 			</section>
