--- a/home.html
+++ b/home.html
@@ -40,89 +40,30 @@
 					</header>
 
 				<!-- Banner -->
-					<section id="banner">
-						<div class="inner">
-							<h2>Mason Color 4 a Cure 5K</h2>
-							<p>Benefiting the Lukemia Lymphoma Society<br />
-							Through Mason High School National Honor Society</p>
+				<!-- id="outer" banner -->
+					<section>
+						<div class="inner" id="home-top-video">
+							<video autoplay loop id="video-background" muted plays-inline>
+										 <source src="images/color.mp4" type="video/mp4">
+							</video>
+							<div  id="home-text">
+								<h2>Mason Color 4 a Cure 5K</h2>
+								<p>Benefiting the Lukemia Lymphoma Society<br/>
+									Through Mason High School National Honor Society</p>
 							<ul class="actions">
 								<li><a href="#" class="button">Register</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more scrolly">Learn More</a>
-					</section>
-
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
 						</div>
-					</section>
 
-				<!-- Three -->
-					<section id="three" class="wrapper style3 special">
-						<div class="inner">
-							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-							</header>
-							<ul class="features">
-								<li class="icon fa-paper-plane-o">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-								<li class="icon fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-								</li>
-							</ul>
-						</div>
 					</section>
-
-				<!-- CTA -->
-					<section id="cta" class="wrapper style4">
-						<div class="inner">
-							<header>
-								<h2>Register now</h2>
-								<p>Register before 10.26 to receive a free t-shirt.</p>
-							</header>
-							<ul class="actions vertical">
-								<li><a href="register.html" class="button fit">REGISTER</a></li>
-								<li><a href="event.html" class="button fit special">Learn more</a></li>
-							</ul>
-						</div>
-					</section>
-
-				<!-- Footer -->
-					<footer id="footer">
-						<ul class="icons">
-							<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>Color 4 a cure 5k</li><li>Mason High School National Honor Society</li>
-						</ul>
-					</footer>
 
 			</div>
 
+
 		<!-- Scripts -->
 		 <script src="assets/js/video.js"></script>
-
-
-
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
