--- a/vtest.html
+++ b/vtest.html
@@ -55,11 +55,11 @@
 
 					<video autoplay loop id="video-background" muted plays-inline>
 						<!-- https://player.vimeo.com/external/158148793.hd.mp4?s=8e8741dbee251d5c35a759718d4b0976fbf38b6f&profile_id=119&oauth2_token_id=57447761 -->
-  					<source src="colorrunclipped.mp4" type="video/mp4">
+  					<source src="images/color.mp4" type="video/mp4">
 					</video>
 
 				<!-- Footer -->
-					<footer id="footer">
+					<!-- <footer id="footer">
 						<ul class="icons">
 							<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
@@ -68,12 +68,11 @@
 						<ul class="copyright">
 							<li>Color 4 a cure 5k</li><li>Mason High School National Honor Society</li>
 						</ul>
-					</footer>
+					</footer> -->
 
 			</div>
 
 		<!-- Scripts -->
-		 <script src="assets/js/video.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
