--- a/sponsors.html
+++ b/sponsors.html
@@ -28,7 +28,7 @@
                               <li><a href="index.html">Home</a></li>
         											<li><a href="event.html">Event Details</a></li>
         											<li><a href="event.html#faq">FAQ</a></li>
-        											<li><a href="about.html">About Us</a></li>
+        											<li><a href="#">About Us</a></li>
         											<li><a href="sponsors.html">Our Sponsors</a></li>
         											<li><a href="contact.html">Contact Us</a></li>
 
@@ -51,13 +51,13 @@
                         <h2>Corporate Sponsors</h2>
                         <div class="box alt">
                             <div class="row uniform 50%">
-                                <div class="4u"><span class="image fit"><img src="http://logo-load.com/uploads/posts/2016-04/1459873060_culvers-logo.png" alt="" /></span></div>
+                                <!-- <div class="4u"><span class="image fit"><img src="http://logo-load.com/uploads/posts/2016-04/1459873060_culvers-logo.png" alt="" /></span></div>
                                 <div class="4u"><span class="image fit"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/5c/Current_Kroger_logo.svg/1000px-Current_Kroger_logo.svg.png" alt="" /></span></div>
                                 <div class="4u"><span class="image fit"><img src="https://www.philanthropy.com/img/photos/biz/photo_81669_original.png" alt="" /></span></div>
                                 <div class="4u"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
                                 <div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
                                 <div class="4u"><span class="image fit"><img src="images/pic01.jpg" alt="" /></span></div>
-                                <div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div>
+                                <div class="4u"><span class="image fit"><img src="images/pic02.jpg" alt="" /></span></div> -->
                             </div>
                         </div>
                     </section>
@@ -66,9 +66,7 @@
                         <div class="row">
                             <div class="6u 12u$(medium)">
                                 <ul class="alt">
-                                    <li>The Jones Family</li>
-                                    <li>Bob and Sue Johnson</li>
-                                    <li>The Randy Family</li>
+                                    <li>The Connors Family</li>
                                 </ul>
                             </div>
                         </div>
@@ -97,7 +95,7 @@
             <ul class="icons">
                 <li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
                 <li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+                <li><a href="mailto:mhscolor4acure5k@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
                 <li>Color 4 a cure 5k</li>
