--- a/register.html
+++ b/register.html
@@ -90,7 +90,7 @@
             <ul class="icons">
                 <li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
                 <li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                <li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+                <li><a href="mailto:mhscolor4acure5k@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
             </ul>
             <ul class="copyright">
                 <li>Color 4 a cure 5k</li>
