--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
 								</li>
 							</ul>
 						</nav>
+
 					</header>
 
 				<!-- Main -->
@@ -50,8 +51,8 @@
 						<section class="wrapper style5">
 							<div class="inner">
 								<h4>Contact Us</h4>
-								<h5><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:hello@gmail.com"> hello@gmail.com</a></h5>
-								<h5><i class="fa fa-phone" aria-hidden="true"></i> 513.123.1234</h5>
+								<h5><i class="fa fa-envelope" aria-hidden="true"></i><a href="mailto:mhscolor4acure5k@gmail.com"> mhscolor4acure5k@gmail.com</a></h5>
+								<h5><i class="fa fa-phone" aria-hidden="true"></i> 513.884.6175</h5>
 								<hr />
 							</div>
 						</section>
@@ -75,7 +76,7 @@
 					<ul class="icons">
 						<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+						<li><a href="mailto:mhscolor4acure5k@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
 						<li>Color 4 a cure 5k</li>
