--- a/event.html
+++ b/event.html
@@ -106,6 +106,8 @@
 									<li><i>Children 3 and under: free</i></li>
 								</ul>
 								<a href="register.html" class="button fit special">Register</a>
+								<a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit large">Adult Waiver</a>
+								<a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit">Student Waiver</a>
 							</div>
 						</div>
 					</section>
@@ -141,7 +143,7 @@
 								</div>
 								<div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
 									<div class="card-body">
-										A little rain won’t stop us! If there are major weather emergencies, we'll notify you if we decide to reschedule or cancel the event.
+										A little rain won’t stop us! If there are major weather emergencies, we'll notify you.
 									</div>
 								</div>
 							</div>
@@ -170,7 +172,7 @@
 								</div>
 								<div id="collapseFour" class="collapse" role="tabpanel" aria-labelledby="headingFour" data-parent="#accordion">
 									<div class="card-body">
-										The Color 4 a Cure 5K is not timed. We suggest self-timing for anyone desiring a finish time.
+										The run is not timed. We suggest self-timing for anyone desiring a finish time.
 									</div>
 								</div>
 							</div>
@@ -216,7 +218,7 @@
 								</div>
 								<div id="collapseSeven" class="collapse" role="tabpanel" aria-labelledby="headingSeven" data-parent="#accordion">
 									<div class="card-body">
-										Contact us at <b><a href="mailto:hello@gmail.com">hello@gmail.com</a><b> or <b>513.123.1234</b>
+										Contact us at <b><a href="mailto:mailto:mhscolor4acure5k@gmail.com">mailto:mhscolor4acure5k@gmail.com</a><b> or <b>513.884.6175</b>
 										</div>
 								</div>
 							</div>
@@ -241,6 +243,7 @@
 					</header>
 					<ul class="actions vertical">
 						<li><a href="register.html" class="button fit special">REGISTER</a></li>
+
 					</ul>
 				</div>
 			</section>
@@ -251,7 +254,7 @@
 			<ul class="icons">
 				<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 				<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-				<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+				<li><a href="mailto:mhscolor4acure5k@gmail.com"class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 			</ul>
 			<ul class="copyright">
 				<li>Color 4 a cure 5k</li>
