--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="event.html">Event Details</a></li>
 											<li><a href="event.html#faq">FAQ</a></li>
-											<li><a href="about.html">About Us</a></li>
+											<li><a href="#">About Us</a></li>
 											<li><a href="sponsors.html">Our Sponsors</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 
@@ -49,11 +49,11 @@
 								<!-- <li><a href="#" class="button">Register</a></li> -->
 							</ul>
 						</div>
-						<a href="register.html" class="more scrolly">Register</a>
+						<a href="register.html" class="more scrolly">Learn More</a>
 					</section>
 
 				<!-- One -->
-					<!-- <section id="one" class="wrapper style1 special">
+				<!-- <section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Arcu aliquet vel lobortis ata nisl<br />
@@ -109,7 +109,7 @@
 						<ul class="icons">
 							<li><a href="https://twitter.com/mhscolor4acure" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://instagram.com/mhscolor4acure" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+							<li><a href="mailto:mhscolor4acure5k@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
 							<li>Color 4 a cure 5k</li><li>Mason High School National Honor Society</li>
