--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 								<!-- <li><a href="#" class="button">Register</a></li> -->
 							</ul>
 						</div>
-						<a href="register.html" class="more scrolly">Learn More</a>
+						<a href="event.html" class="more scrolly">Learn More</a>
 					</section>
 
 				<!-- One -->
