new homepage spotlight section

--- a/newindex.html
+++ b/newindex.html
@@ -70,19 +70,19 @@
 						</section>
 
 					<!-- Two -->
-						<section id="two" class="wrapper alt style2"  >
+						<section id="two" class="wrapper alt style2 OR"  >
 							<section class="spotlight" class= "spot">
 								<div class="spot sp1">
-									<h2>Title</h2>
-									<p>Some body text hello hello </p>
+									<a href="register.html"><h2>Run</h2>
+									<p>Some body text hello hello </p></a>
 								</div>
 								<div class="spot sp2">
-									<h2>Title</h2>
-									<p>Some body text hello hello </p>
+									<a href="sponsors.html"><h2>Sponsor</h2>
+									<p>Some body text hello hello </p></a>
 								</div>
 								<div class="spot sp3">
-									<h2>Title</h2>
-									<p>Some body text hello hello </p>
+									<a href="donate.html"><h2>Donate</h2>
+									<p>Some body text hello hello </p></a>
 							</div>
 							</section>
 						</section>
