building new about page elements

--- a/newindex.html
+++ b/newindex.html
@@ -27,7 +27,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="event.html">Event Details</a></li>
 											<li><a href="event.html#faq">FAQ</a></li>
-											<li><a href="#">About Us</a></li>
+											<!-- <li><a href="#">About Us</a></li> -->
 											<li><a href="sponsors.html">Our Sponsors</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 
@@ -91,37 +91,35 @@
 						<section id="three" class="wrapper style3 special">
 							<div class="inner">
 								<header class="major">
-									<h2>Accumsan mus tortor nunc aliquet</h2>
-									<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-									fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
-								</header>
+									<h2>The Impact you help us make</h2>
+									</header>
 								<ul class="features">
-									<li class="icon fa-paper-plane-o">
-										<h3>Arcu accumsan</h3>
-										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-									</li>
-									<li class="icon fa-laptop">
-										<h3>Ac Augue Eget</h3>
-										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-									</li>
-									<li class="icon fa-code">
-										<h3>Mus Scelerisque</h3>
-										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-									</li>
-									<li class="icon fa-headphones">
-										<h3>Mauris Imperdiet</h3>
-										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-									</li>
-									<li class="icon fa-heart-o">
-										<h3>Aenean Primis</h3>
-										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-									</li>
-									<li class="icon fa-flag-o">
-										<h3>Tortor Ut</h3>
-										<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
-									</li>
 								</ul>
 							</div>
+						</section>
+
+						<section id="two" class="wrapper alt style2">
+							<section class="spotlight">
+								<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+									<h2>Fund approximately
+									</br></br><span class="ynum">300</span></br>
+									active Lukemia & Lymphoma Society Research projects.</h2>
+								</div>
+							</section>
+							<section class="spotlight">
+								<div class="image"><img src="images/patients.jpg" alt="" /></div><div class="content">
+									<h2>Help more than
+									</br></br><span class="ynum">55,000</span></br>
+									patients afford treatment.</h2>
+								</div>
+							</section>
+							<section class="spotlight">
+								<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
+									<h2>Invest More than
+									</br></br><span class="ynum">$1 B. +</span></br>
+									in cancer research.</h2>
+								</div>
+							</section>
 						</section>
 				<!-- Footer -->
 					<footer id="footer">
