--- a/sponsors.html
+++ b/sponsors.html
@@ -28,7 +28,7 @@
                               <li><a href="index.html">Home</a></li>
         											<li><a href="event.html">Event Details</a></li>
         											<li><a href="event.html#faq">FAQ</a></li>
-        											<li><a href="#">About Us</a></li>
+        											<!-- <li><a href="#">About Us</a></li> -->
         											<li><a href="sponsors.html">Our Sponsors</a></li>
         											<li><a href="contact.html">Contact Us</a></li>
 
