--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="event.html">Event Details</a></li>
 											<li><a href="event.html#faq">FAQ</a></li>
-											<li><a href="about.html">About Us</a></li>
+											<li><a href="#">About Us</a></li>
 											<li><a href="sponsors.html">Our Sponsors</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 
@@ -116,7 +116,7 @@
 							</header>
 							<ul class="actions vertical">
 								<li><a href="#link1" class="button fit">REGISTER</a></li>
-								<li><a href="about.html" class="button fit special">Learn more</a></li>
+								<li><a href="#" class="button fit special">Learn more</a></li>
 							</ul>
 						</div>
 					</section>
