--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="event.html">Event Details</a></li>
 											<li><a href="event.html#faq">FAQ</a></li>
-											<li><a href="#">About Us</a></li>
+											<!-- <li><a href="#">About Us</a></li> -->
 											<li><a href="sponsors.html">Our Sponsors</a></li>
 											<li><a href="contact.html">Contact Us</a></li>
 
@@ -51,6 +51,9 @@
 						</div>
 						<a href="event.html" class="more scrolly">Learn More</a>
 					</section>
+
+
+
 
 				<!-- One -->
 				<!-- <section id="one" class="wrapper style1 special">
