new images for new index

--- a/newindex.html
+++ b/newindex.html
@@ -88,19 +88,17 @@
 						</section>
 
 					<!-- Three -->
-						<section id="three" class="wrapper style3 special">
+						<section id="three" class="wrapper style3 special OR">
 							<div class="inner">
-								<header class="major">
+								<header class="major OR">
 									<h2>The Impact you help us make</h2>
 									</header>
-								<ul class="features">
-								</ul>
 							</div>
 						</section>
 
 						<section id="two" class="wrapper alt style2">
 							<section class="spotlight">
-								<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
+								<div class="image"><img src="https://static.pexels.com/photos/248152/pexels-photo-248152.jpeg" alt="" /></div><div class="content">
 									<h2>Fund approximately
 									</br></br><span class="ynum">300</span></br>
 									active Lukemia & Lymphoma Society Research projects.</h2>
