temp registration message

--- a/register.html
+++ b/register.html
@@ -48,31 +48,11 @@
     			<section class="wrapper style5">
     				<div class="inner">
     					<section>
-    						<h2>Register</h2>
+    						<h2>Registration opens 10/16! Be sure to check back later.</h2>
     						<div class="row">
     							<div class="6u 12u$(medium)">
-    								<a href="#" class="button fit special">Register</a>
-    							</div>
+    								    							</div>
     							<div class="6u$ 12u$(medium)">
-
-                      <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit special">Adult EMA</a>
-                      <a target="_blank" href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit special">Student EMA</a>
-
-    								<h5>Color 4 A Cure 5K</h5>
-    								<ul class ="alt">
-    									<li><i class="fa fa-map-marker" aria-hidden="true"></i>  <a href="https://goo.gl/maps/e5Pij3ppvyQ2">Corwin Nixon Park</a> Mason, OH 45040</li>
-    									<li><i class="fa fa-calendar" aria-hidden="true"></i> Saturday 11/11/17         10 - 11 AM</li>
-    									<li><i class="fa fa-heartbeat" aria-hidden="true"></i> Benefiting the Lukemia and Lymphoma Society through Mason National Honor Society</li>
-    								</ul>
-                    <a href="event.html" class="button" id="btndetails">Event Details</a>
-
-    								<h5>Pricing</h5>
-    								<ul class="alt">
-    									<li>10/16 - 10/26 Early Registration: $25 with t-shirt</li>
-    									<li>10/27 - 11/10 Late Registration: $25 no t-shirt</li>
-    									<li>11/11 Day of Registration: $30 no t-shirt</li>
-    									<li><i>Children 3 and under: free</i></li>
-    								</ul>
     							</div>
     						</div>
     					</section>
