--- a/newindex.html
+++ b/newindex.html
@@ -78,11 +78,11 @@
 								</div>
 								<div class="spot sp2">
 									<a href="sponsors.html"><h2>Sponsor</h2>
-									<p>Some body text hello hello </p></a>
+									<p>ALl </p></a>
 								</div>
 								<div class="spot sp3">
-									<a href="donate.html"><h2>Donate</h2>
-									<p>Some body text hello hello </p></a>
+									<a href="http://events.lls.org/pages/soh/WilliamMasonHighSchool-2018"><h2>Donate</h2>
+									<p>Can't run but still want to help? </p></a>
 							</div>
 							</section>
 						</section>
