--- a/sponsors.html
+++ b/sponsors.html
@@ -71,6 +71,18 @@
                             </div>
                         </div>
                     </section>
+                    <section>
+                    </br>
+                    </br>
+                    </br>
+                    </br>
+                    </br>
+                        <h2>Interested in sponsoring?</h2>
+                        <div class="row">
+                                <p>Contact us <a href= "contact.html">here</a> and we'll give you more information on how you or your company can help.</p>
+                            </div>
+                        </div>
+                    </section>
 
 
 
