--- a/newindex.html
+++ b/newindex.html
@@ -49,14 +49,14 @@
 								<!-- <li><a href="#" class="button">Register</a></li> -->
 							</ul>
 						</div>
-						<a href="event.html" class="more scrolly">Learn More</a>
+						<a href="#two" class="more scrolly">Learn More</a>
 					</section>
 
 					<!-- One -->
 						<section id="one" class="wrapper style1 special">
 							<div class="inner">
 								<header class="major">
-									<h2>Arcu aliquet vel lobortis ata nisl<br />
+									<h2>In 2017, the Mason National Honor Society raised<br />
 									eget augue amet aliquet nisl cep donec</h2>
 									<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
 									fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
@@ -69,26 +69,9 @@
 							</div>
 						</section>
 
-					<!-- Two -->
-						<section id="two" class="wrapper alt style2 OR"  >
-							<section class="spotlight" class= "spot">
-								<div class="spot sp1">
-									<a href="register.html"><h2>Run</h2>
-									<p>Some body text hello hello </p></a>
-								</div>
-								<div class="spot sp2">
-									<a href="sponsors.html"><h2>Sponsor</h2>
-									<p>ALl </p></a>
-								</div>
-								<div class="spot sp3">
-									<a href="http://events.lls.org/pages/soh/WilliamMasonHighSchool-2018"><h2>Donate</h2>
-									<p>Can't run but still want to help? </p></a>
-							</div>
-							</section>
-						</section>
 
-					<!-- Three -->
-						<section id="three" class="wrapper style3 special OR">
+
+						<section id="two" class="wrapper style3 special OR">
 							<div class="inner">
 								<header class="major OR">
 									<h2>The Impact you help us make</h2>
@@ -98,7 +81,10 @@
 
 						<section id="two" class="wrapper alt style2">
 							<section class="spotlight">
-								<div class="image"><img src="https://static.pexels.com/photos/248152/pexels-photo-248152.jpeg" alt="" /></div><div class="content">
+								<div class="image">
+									<!-- <img src="https://static.pexels.com/photos/248152/pexels-photo-248152.jpeg" alt="" /> -->
+									<img src="images/patients.jpg" alt="" />
+								</div><div class="content">
 									<h2>Fund approximately
 									</br></br><span class="ynum">300</span></br>
 									active Lukemia & Lymphoma Society Research projects.</h2>
@@ -119,6 +105,24 @@
 								</div>
 							</section>
 						</section>
+
+					<!-- Three -->
+						<section id="three" class="wrapper alt style2 OR"  >
+							<section class="spotlight" class= "spot">
+								<div class="spot sp1">
+									<a href="register.html"><h2>Run</h2>
+									<p>Benefit the LLS and have fun with friends.</p></a>
+								</div>
+								<div class="spot sp2">
+									<a href="sponsors.html"><h2>Sponsor</h2>
+									<p>Help us put on a great event.</p></a>
+								</div>
+								<div class="spot sp3">
+									<a href="http://events.lls.org/pages/soh/WilliamMasonHighSchool-2018"><h2>Donate</h2>
+									<p>Can't run but still want to help? </p></a>
+							</div>
+							</section>
+						</section>
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
@@ -135,8 +139,6 @@
 
 		<!-- Scripts -->
 		 <script src="assets/js/video.js"></script>
-
-
 
 			<script src="assets/js/jquery.min.js"></script>
 			<script src="assets/js/jquery.scrollex.min.js"></script>
