adding new registration link

--- a/sponsors.html
+++ b/sponsors.html
@@ -32,7 +32,7 @@
                                 <li><a href="sponsors.html">Our Sponsors</a></li>
                                 <li><a href="contact.html">Contact Us</a></li>
 
-                                <li><a href="register.html"></br>Register</a></li>
+                                <li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li>
                             </ul>
                         </div>
                     </li>
@@ -97,7 +97,7 @@
                     <p>Register before 10.26 to receive a free t-shirt.</p>
                 </header>
                 <ul class="actions vertical">
-                    <li><a href="register.html" class="button fit">REGISTER</a></li>
+                    <li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit">REGISTER</a></li>
                     <li><a href="event.html" class="button fit special">Learn more</a></li>
                 </ul>
             </div>
