--- a/vtest.html
+++ b/vtest.html
@@ -33,7 +33,7 @@
 								<li><a href="sponsors.html">Our Sponsors</a></li>
 								<li><a href="contact.html">Contact Us</a></li>
 
-								<li><a href="register.html"></br>Register</a></li>
+								<li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li>
 							</ul>
 						</div>
 					</li>
