adding local level registration links

--- a/event.html
+++ b/event.html
@@ -33,7 +33,7 @@
 								<li><a href="sponsors.html">Our Sponsors</a></li>
 								<li><a href="contact.html">Contact Us</a></li>
 
-								<li><a href="register.html"></br>Register</a></li>
+								<li><a href="https://www.locallevelevents.com/events/details/3828"></br>Register</a></li>
 							</ul>
 						</div>
 					</li>
@@ -104,7 +104,7 @@
 									<li>11/11 Day of Registration: $30 no t-shirt</li>
 									<li><i>Children 3 and under: free</i></li>
 								</ul>
-								<a href="register.html" class="button fit special">Register</a>
+								<a href="https://www.locallevelevents.com/events/details/3828" class="button fit special">Register</a>
 								<a href="https://drive.google.com/file/d/0B_fYFpL-BMVTZjRHa1ZwT0ZJcU0/view?usp=sharing" class="button fit large">Adult Waiver</a>
 								<a href="https://drive.google.com/file/d/0B_fYFpL-BMVTeEZnMWNZR0V3bF9qVkNUby0ycVpqR3hTLXpV/view?usp=sharing" class="button fit">Student Waiver</a>
 							</div>
@@ -242,7 +242,7 @@
 					<p>Register before 10.26 to receive a free t-shirt.</p>
 				</header>
 				<ul class="actions vertical">
-					<li><a href="register.html" class="button fit special">REGISTER</a></li>
+					<li><a href="https://www.locallevelevents.com/events/details/3828" class="button fit special">REGISTER</a></li>
 
 				</ul>
 			</div>
